--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-local-storage-state": "^19.2.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
